examples/test/testpolicy14324.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14324
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key8: value0
      key10: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key49: value11
          key21: value44
      podSelector:
        matchLabels:
          key37: value32
          key13: value41
          key1: value5
